--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,13 @@
-    <div style="height: 10rem; background-color : #38df81; border-radius: 1rem; margin: 2rem;">
+    <div style="text-align:center; margin-top:2rem;" >
+
+        <div style="font-size : 0.6rem;">
+            <span> 공지사항 </span>
+            <span> 제휴문의 </span>
+            <span> 서비스 소개 </span>
+        </div>
+
+        <div style="margin-top: 1rem;">
+            <h5 style="font-family: 'Orelega One', cursive;">Pragmatic</h5>
+        </div>
 
     </div >
