--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,13 +1,13 @@
-    <div style="text-align:center; margin-top:2rem;" >
+    <div class="pragmatic_footer_box" >
 
-        <div style="font-size : 0.6rem;">
+        <div class="pragmatic_footer_button">
             <span> 공지사항 </span>
             <span> 제휴문의 </span>
             <span> 서비스 소개 </span>
         </div>
 
         <div style="margin-top: 1rem;">
-            <h5 style="font-family: 'Orelega One', cursive;">Pragmatic</h5>
+            <h5 class="pragmatic_footer_logo">Pragmatic</h5>
         </div>
 
     </div >
