--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 
 {% include 'head.html' %}
 
-<body>
+<body style="font-family: 'Orelega One', cursive;">
 
    {% include 'header.html' %}
     <hr>
