--- a/accountapp/templates/accountapp/create.html
+++ b/accountapp/templates/accountapp/create.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
 
-    <div style="text-align: center">
+    <div style="text-align: center; max-width: 400px; margin: 4rem auto">
+        <div class="mb-4">
+            <h4>SignUp</h4>
+        </div>
         <form action="{% url 'accountapp:create' %}" method="post">
             {% csrf_token %}
-            {{ form }}
+<!--            {{ form }}-->
+            {% bootstrap_form form %}
             <input type="submit" class="btn btn-primary">
         </form>
     </div>
