--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -10,6 +10,15 @@
       <h2 style="font-family: 'Orelega One', cursive;">
         {{ target_user.username }}
       </h2>
+
+      {% if target_user == user %}
+      <a href="{% url 'accountapp:update' pk=user.pk %}" >
+        <p>
+          Change Info
+        </p>
+      </a>
+      {% endif %}
+
     </div>
   </div>
 
