--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -7,9 +7,17 @@
       <p>
         {{ user.date_joined }}
       </p>
+      {% if target_user.profile %}
       <h2 style="font-family: 'Orelega One', cursive;">
-        {{ target_user.username }}
+        {{ target_user.profile.nickname }}
       </h2>
+      {% else %}
+      <a href="{% url 'profileapp:create' %}">
+        <h2 style="font-family: 'Orelega One', cursive;">
+          Create Profile
+        </h2>
+      </a>
+      {% endif %}
 
       {% if target_user == user %}
       <a href="{% url 'accountapp:update' pk=user.pk %}" >
