--- a/accountapp/templates/accountapp/detail.html
+++ b/accountapp/templates/accountapp/detail.html
@@ -8,27 +8,33 @@
         {{ user.date_joined }}
       </p>
 
-
       <img src="{{ target_user.profile.image.url }}" alt="" style="height : 10rem; width : 10rem; border-radius:20rem; margin-bottom : 2rem">
 
       {% if target_user.profile %}
       <h2 style="font-family: 'Orelega One', cursive;">
         {{ target_user.profile.nickname }}
+        {% if target_user == user %}
         <a href="{% url 'profileapp:update' pk=target_user.profile.pk %}">
           edit
         </a>
+        {% endif %}
       </h2>
-      {% else %}
-      <a href="{% url 'profileapp:create' %}">
-        <h2 style="font-family: 'Orelega One', cursive;">
-          Create Profile
-        </h2>
-      </a>
-      {% endif %}
-
       <h5 style="margin-bottom:3rem ">
         {{ target_user.profile.message }}
       </h5>
+      {% else %}
+        {% if target_user == user %}
+        <a href="{% url 'profileapp:create' %}">
+          <h2 style="font-family: 'Orelega One', cursive;">
+            Create Profile {{target_user}} {{user}}
+          </h2>
+        </a>
+        {% else %}
+        <h2>
+          닉네임 미설정
+        </h2>
+        {% endif %}
+      {% endif %}
 
       {% if target_user == user %}
       <a href="{% url 'accountapp:update' pk=user.pk %}" >
